# CodexL

./: .gitignore  .npmignore  NOTICE  README.md  README.zh-CN.md  README_zh.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.toml
.github/workflows/: release.yml
public/: app.js  index.html  realtimeTransport.js  styles.css
remote/control-pwa/: README.md  _headers  app.js  control.html  index.html  manifest.webmanifest  qrDecoder.js  react-app.css  react-app.js  realtimeTransport.js  service-worker.js  styles.css  tsconfig.json  vite.config.ts
remote/control-pwa/src/: main.tsx  react.css  (+1 more)
scripts/: package-builtin-plugins.mjs  reicon.mjs  release.mjs  verify-release-version.mjs
selfhost/: Dockerfile  relay.js
src/: App.tsx  cdpClient.js  codexLauncher.js  config.js  i18n.ts  main.tsx  mobileWsServer.js  ports.js  qr.ts  remoteRelayClient.js  server.js  staticServer.js  styles.css  workerDeploy.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_middleware.rs  config.rs  extensions.rs  launcher.rs  lib.rs  main.rs  ports.rs  server.rs
src-tauri/src/extensions/builtins/: mod.rs
src-tauri/src/extensions/builtins/bot_bridge/: mod.rs  tests.rs
src-tauri/src/extensions/builtins/gateway/: config.rs  mod.rs  service.rs
src-tauri/src/remote/: assets.rs  crypto.rs  input.rs  mod.rs  util.rs
src-tauri/src/remote/cdp_resources/: bridge.rs  bridge_script.rs  cdp.rs  file_picker.rs  mod.rs  resource.rs  tests.rs
worker/: index.js
(+17 files in other folders)
