[package]
name = "codexl"
version = "1.0.3"
description = "Codex Launcher - A Tauri App"
authors = ["musistudio"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "codexl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rand = "0.8"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
ring = "0.17"
